--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -12,9 +12,9 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.103.0",
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^26.0.15",
     "@types/node": "10.17.27",
-    "jest": "^26.4.2",
+    "jest": "26.0.0",
     "ts-jest": "^26.2.0",
     "aws-cdk": "1.103.0",
     "ts-node": "^9.0.0",
