--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -21,7 +21,11 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/core": "1.103.0",
+    "@aws-cdk/aws-apigateway": "^1.104.0",
+    "@aws-cdk/aws-cloudfront": "^1.104.0",
+    "@aws-cdk/aws-dynamodb": "^1.104.0",
+    "@aws-cdk/aws-s3": "^1.104.0",
+    "@aws-cdk/core": "^1.104.0",
     "source-map-support": "^0.5.16"
   }
 }
