--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -11,21 +11,24 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.103.0",
-    "@types/jest": "^26.0.15",
+    "@aws-cdk/assert": "1.104.0",
+    "@types/jest": "^26.0.23",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.104.0",
     "jest": "26.0.0",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.103.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.104.0",
-    "@aws-cdk/aws-cloudfront": "^1.104.0",
-    "@aws-cdk/aws-dynamodb": "^1.104.0",
-    "@aws-cdk/aws-s3": "^1.104.0",
-    "@aws-cdk/core": "^1.104.0",
+    "@aws-cdk/aws-apigateway": "1.104.0",
+    "@aws-cdk/aws-cloudfront": "1.104.0",
+    "@aws-cdk/aws-dynamodb": "1.104.0",
+    "@aws-cdk/aws-iam": "1.104.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.104.0",
+    "@aws-cdk/aws-s3": "1.104.0",
+    "@aws-cdk/core": "1.104.0",
+    "aws-sdk": "^2.908.0",
     "source-map-support": "^0.5.16"
   }
 }
