--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -28,7 +28,9 @@
     "@aws-cdk/aws-lambda-nodejs": "1.104.0",
     "@aws-cdk/aws-s3": "1.104.0",
     "@aws-cdk/core": "1.104.0",
+    "@types/uuid": "^8.3.0",
     "aws-sdk": "^2.908.0",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "uuid": "^8.3.2"
   }
 }
